mobile media query completed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         class="mail"
         data-aos="fade-up"
         data-aos-delay="1000"
-        >Drop a Message!</a
+        >Contact Me!</a
       >
     </section>
 
