--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </div>
         </div>
 
-        <div class="card" data-aos="fade-up" data-aos-delay="800">
+        <div class="card" data-aos="fade-right" data-aos-delay="800">
           <img
             src="/media/infinity-scroll.png"
             class="card-img-top"
@@ -192,7 +192,7 @@
           </div>
         </div>
 
-        <div class="card" data-aos="fade-left" data-aos-delay="1200">
+        <div class="card" data-aos="fade-right" data-aos-delay="1200">
           <img src="/media/calculator.png" class="card-img-top" alt="..." />
           <div>
             <h5 class="card-title">Basic Calculator</h5>
