--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
             plan was to just learn a skill that would keep me engaged and get
             over the boredom of not being able to move around — then I got
             hooked due to what I can accomplish with HTML, CSS and JS. Since
-            then, I have never looked back. <br />
-            <br />I aspire toward a career that will allow me to channel my
-            thought processes into
+            then, I have never looked back.
+          </p>
+          <p>
+            I aspire toward a career that will allow me to channel my thought
+            processes into
             <span class="beautify"
               >crafting excellent software and beautiful experiences</span
             >.
