mobile media query refactored

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
       <main class="about-content_wrapper">
         <div data-aos="zoom-in-right" data-aos-delay="600">
           <p class="about-subText">
-            Hello! My name is Muhammed Balogun. I'm a Software developer with a
-            <span class="beautify">passion for Frontend development</span>. My
-            interest in Software development started back in 2020 when I decided
-            to try something new during the Corona Virus lockdown period. My
+            Hello! My name is Muhammed Balogun. I'm a Software developer
+            <span class="beautify">with a passion for Frontend development</span
+            >. My interest in Software development started back in 2020 when I
+            decided to try something new during the Corona lockdown period. My
             plan was to just learn a skill that would keep me engaged and get
-            over the boredom of not being able to move around — then I got
-            hooked due to what I can accomplish with HTML, CSS and JS. Since
-            then, I have never looked back.
+            over the boredom of not being able to move around — then I got wowed
+            with what I can accomplish with HTML, CSS and JavaScript. Since
+            then, I haven't looked back.
           </p>
           <p>
             I aspire toward a career that will allow me to channel my thought
