--- a/index.html
+++ b/index.html
@@ -227,12 +227,26 @@
         my best to get back to you!
       </p>
       <a
-        href="https://wa.me/08070543678"
+        href="https://wa.me/+2348070543678"
         class="whatsapp"
         data-aos="fade-up"
         data-aos-delay="1000"
         >Say Hello!</a
       >
+      <div class="social-icons__mobile">
+        <a href="https://github.com/Balogunmba22" target="_blank">
+          <img src="/media/github.svg" alt="Github" />
+        </a>
+        <a href="https://www.linkedin.com/in/balogunmba0993/" target="_blank">
+          <img src="/media/linkedin.svg" alt="Linkedin" />
+        </a>
+        <a href="https://twitter.com/balogunmba" target="_blank">
+          <img src="/media/twitter.svg" alt="Twitter" />
+        </a>
+        <a href="mailto:balogunmba22@gmail.com">
+          <img src="/media/email.svg" alt="Email" />
+        </a>
+      </div>
       <footer>
         <small>Built with love ❤️ in HTML, CSS, JavaSript and Boostrap</small>
         <br />
